--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "firebase": "^11.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.17"
